# glandais.github.io

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml
.github/workflows/: build.yml
data/: resume.fr.yaml
docs/: index.html  style.css
docs/downloads/: Gabriel_Landais_CV_FR.docx
docs/superpowers/plans/: 2026-04-03-cv-as-code.md
hooks/: pre-commit  pre-push
jug-java8/: index.html
jug-java8/css/theme/: black.css
prompts/: INITIAL_PROMPT.md
scripts/: ats_score.py  build.py  generate_docx.py  generate_pdf.py  generate_site.py  install-hooks.sh  linkedin_diff.py  resume_loader.py
templates/ats/: resume.html.j2
templates/visual/: resume.html.j2
tests/: test_ats_score.py  test_generate_docx.py  test_generate_pdf.py  test_generate_site.py  test_linkedin_diff.py  test_resume_loader.py
