[project]
name = "cv-as-code"
version = "0.1.0"
description = "ATS-friendly resume pipeline from YAML source"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1",
    "weasyprint>=62",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
cv = "scripts.build:app"
